[package]
name = "arcium-privalend"
version = "0.1.0"
edition = "2021"

[dependencies]
# The SDK is currently in a private repository; logic is implemented as a PoC
# arcium-sdk = { git = "https://github.com/arcium-hq/arcium-sdk", branch = "main" }
solana-program = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
borsh = "1.0.0"